add class projects

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     </head>
 
     <body>
-        <p>Hello World</p>
+        <h1>*M Was Here*</h1>
+        <p>My homepage for Handmade Web!</p>
+
+        <ul>
+            <li><a href="first_website/index.html">first website</a></li>
+            <li><a href="Passion Project/index.html">passion project</a></li>
+        </ul>
     </body>
 </html>
