passion project update

--- a/first_website/index.html
+++ b/first_website/index.html
@@ -13,7 +13,7 @@
         
         <ul> 
             <li><a href="https://makealivingwriting.com/two-headed-calf-poem-meaning/">poem analysis</a></li>
-            <li><a href="about.html">about author</a></li>
+            <li><a href="pages/about.html">about author</a></li>
         </ul>
         <p>Tomorrow when the farm boys find this
             freak of nature, they will wrap his body
@@ -41,7 +41,7 @@
                 <li>twice as many stars</li>
             </ol>
 
-            <img src="two headed calf.jpeg" alt="Image of the Two-Headed Calf poem. Black sans serif on white background">
+            <img src="images/two headed calf.jpeg" alt="Image of the Two-Headed Calf poem. Black sans serif on white background">
             
 
     </body>
