--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title> *M Was Here*</title>
+        <link rel="icon" type="image/png" href="favicon.png">
+        
     </head>
 
     <body>
@@ -11,6 +13,7 @@
         <ul>
             <li><a href="first_website/index.html">first website</a></li>
             <li><a href="Passion Project/index.html">passion project</a></li>
+            <li><a href="Reading Responses/index.html">reading responses</a></li>
         </ul>
     </body>
 </html>
