passion project link update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <ul>
             <li><a href="first_website/index.html">first website</a></li>
-            <li><a href="Passion Project/index.html">passion project</a></li>
+            <li><a href="Passion Project copy/index.html">passion project</a></li>
             <li><a href="Reading Responses/index.html">reading responses</a></li>
         </ul>
     </body>
