homepage style update

--- a/Reading Responses/index.html
+++ b/Reading Responses/index.html
@@ -1,13 +1,47 @@
 <!doctype html>
 <html>
     <head> 
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair Display">
+
         <title>*Reading Responses*</title>
     </head>
 
     <body>
-        <ul>
-            <li><a href="https://drive.google.com/drive/folders/1ZdEtOU9gCdanyLfg9LLPMmjTJ2vPG9S3?usp=drive_link">Reading Responses</a> on Google Drive</li>
-        </ul>
+        <h1>*Reading Responses*</h1>
+
+       <details>
+        <summary class="title"><i>My Wesite is a Shifting House</i></summary>
+            <div class="content">
+        <p>Having come into Handmade Web with no prior experience in websites or coding, I had not thought about the internet in the expansive way that Schwulst explains it. I had heard of the cloud metaphor, but all the different metaphors they use simultaneously break down the possibilities of the internet while also highlighting the extreme complexities it possesses. The web is not one thing, and I had not taken much time to think about all the intricacies they go on to explain. I appreciated when the author wrote “...they are both subject and object at once,”because it adds a perspective of the charm of websites not only being the contents but the decisions that were made to present it in a certain way. I’m also interested in the concept of a website as a puddle that can be fleeting rather than permanent.</p>
+        </div>
+        </details>
+
+       <details>
+        <summary class="title"><i>A Rant on Technology</i></summary>
+         <div class="content">
+        <p>I think the author is right in saying that many people, myself included, can be easily led into the viewpoint of technology being synonymous with modern “hi-tech” inventions while forgetting the foundations of technology as a broader term. A quote that really stood out to me from this article was, “One way to illustrate that most technologies are, in fact, pretty ‘hi-tech,’ is to ask
+        yourself of any man made object, ‘Do I know how to make one?’” This puts technology in a much more overarching state than I am used to thinking about. I also appreciated the author pointing out that recent technologies are “supported by massive exploitation both of natural and human resources.”</p>
+        </div>
+    </details>
+
+       <details>
+        <summary class="title"><i>A Handmade Web</i></summary>
+        <div class="content">
+        <p>Carpenter’s view on the web is really intriguing to me, especially when they explain their intention to “evoke the term 'handmade web' in order to make a correlation between handmade web pages and handmade print materials, such as zines, pamphlets, and artists' books.” Coming from a fine arts background as opposed to digital design which I fell into much more recently, the idea of creating web pages in a “handmade” style feels very up my alley. I feel as though much of Carpenter’s viewpoint on the web is focused on the personal connection that can be established through the process of hand coding as well as the small intricacies that can only be achieved through this approach in comparison to “massmade” web. Carpenter’s ideas make me view handmade web as an artform in itself to house other interests, and I’m very interested in the idea of using hand coding as a means of personal expression.</p>
+        </div>
+     </detials>
+
+       
+
+
+
+
+
+
+
+
+
     </body>
 
 
