--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <title> *M Was Here*</title>
         <link rel="icon" type="image/png" href="favicon.png">
-        
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>*M Was Here*</h1>
-        <p>My homepage for Handmade Web!</p>
+        <h2>My homepage for Handmade Web!</h2>
 
-        <ul>
-            <li><a href="first_website/index.html">first website</a></li>
-            <li><a href="Passion Project copy/index.html">passion project</a></li>
-            <li><a href="Reading Responses/index.html">reading responses</a></li>
-        </ul>
+        <p class="links">
+            <a href="first_website/index.html">*first website*</a><br>
+            <a href="Passion Project copy/index.html">*passion project*</a><br>
+            <a href="Reading Responses/index.html">*reading responses*</a>
+        <p>
     </body>
 </html>
