--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p class="links">
             <a href="first_website/index.html">*first website*</a><br>
             <a href="Passion Project copy/index.html">*passion project*</a><br>
+            <a href="structure copy/index.html">*web as memory*</a>
             <a href="Reading Responses/index.html">*reading responses*</a>
         <p>
     </body>
