reading responses update

--- a/Reading Responses/index.html
+++ b/Reading Responses/index.html
@@ -10,6 +10,7 @@
     <body>
         <h1>*Reading Responses*</h1>
 
+        <div class="container">
        <details>
         <summary class="title"><i>My Wesite is a Shifting House</i></summary>
             <div class="content">
@@ -23,24 +24,24 @@
         <p>I think the author is right in saying that many people, myself included, can be easily led into the viewpoint of technology being synonymous with modern “hi-tech” inventions while forgetting the foundations of technology as a broader term. A quote that really stood out to me from this article was, “One way to illustrate that most technologies are, in fact, pretty ‘hi-tech,’ is to ask
         yourself of any man made object, ‘Do I know how to make one?’” This puts technology in a much more overarching state than I am used to thinking about. I also appreciated the author pointing out that recent technologies are “supported by massive exploitation both of natural and human resources.”</p>
         </div>
-    </details>
+        </details>
 
        <details>
         <summary class="title"><i>A Handmade Web</i></summary>
         <div class="content">
         <p>Carpenter’s view on the web is really intriguing to me, especially when they explain their intention to “evoke the term 'handmade web' in order to make a correlation between handmade web pages and handmade print materials, such as zines, pamphlets, and artists' books.” Coming from a fine arts background as opposed to digital design which I fell into much more recently, the idea of creating web pages in a “handmade” style feels very up my alley. I feel as though much of Carpenter’s viewpoint on the web is focused on the personal connection that can be established through the process of hand coding as well as the small intricacies that can only be achieved through this approach in comparison to “massmade” web. Carpenter’s ideas make me view handmade web as an artform in itself to house other interests, and I’m very interested in the idea of using hand coding as a means of personal expression.</p>
         </div>
-     </detials>
-
-       
+        </details>
 
 
-
-
-
-
-
-
+<details>
+<summary class="title"><i>A Friend is Typing</i></summary>
+<div class="content">
+<p>I found this reading really thought provoking because it brings into conversation concepts that, in the back of my mind, I knew existed but had never taken time to really digest. The reading as a whole really puts into perspective the concept of digital communication, especially in terms of the fact that online conversation lacks many of the attributes of face to face interaction while simultaneously bringing forth many new conversational traits unique to using technology as the means of communication. One idea that stood out to me was the fact that, while face to face conversations have body language, tone, etc. online conversations lack these cues. Because of this, talking online brings about the need to navigate around this issue, and in doing so creates a form of communication with it's own new "rules" and nuances separate from that of traditional verbal communication. Another idea that stood out to me was that instant messaging can be linked to increased stress. This makes a lot of sense to me since soicalizing used to be intermittent, and now for many people it is a constant component of their everyday lives. </p>
+        </div>
+        </detials>
+    
+    </div>
 
     </body>
 
