--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="first_website/index.html">*first website*</a><br>
             <a href="Passion Project copy/index.html">*passion project*</a><br>
             <a href="structure copy/index.html">*web as memory*</a><br>
-            <a href="screen saver/index.html"></a><br>
+            <a href="screen saver/index.html">*screen saver*</a><br>
             <a href="Reading Responses/index.html">*reading responses*</a>
         <p>
     </body>
