--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <a href="Passion Project copy/index.html">*passion project*</a><br>
             <a href="structure copy/index.html">*web as memory*</a><br>
             <a href="screen saver/index.html">*screen saver*</a><br>
+            <a href="accordion/index.html">*accordion*</a><br>
+            <a href="control/index.html">*control*</a><br>
             <a href="Reading Responses/index.html">*reading responses*</a>
         <p>
     </body>
